Bugfix RFID, Albumlist, added language function
